fixed version list layout issue

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -340,7 +340,9 @@
   .reading_plan_index .action_button_green,
   .reading_plan_index .action_button_blue
     width: 90%
-        
+     
+  .dynamic_menu.version_select th a
+    min-width: 4em   
 
   // ---------- Pages
 
